--- a/budget-buddy.css
+++ b/budget-buddy.css
@@ -1,61 +1,151 @@
+@import url('https://fonts.googleapis.com/css?family=Advent+Pro|Montserrat&display=swap');
+
+/* universal styling */
 * {
 	box-sizing: border-box;
-}
-
-body {
-	background-color: #9fccff;
-	min-height: 100vh;
 	margin: 0;
 	padding: 0;
 }
 
-.main-container {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-column-gap: 1em;
+body {
+	background-color: #063e66;
+	min-height: 100vh;
+	font-family: 'Advent Pro', sans-serif;
+	color: #081623;
 }
 
-.inner-container:nth-child(odd) {
-	background-color: rgb(192, 232, 248);
-	padding: 5px;
-}
-
-.inner-container:nth-child(2) {
-	background-color: rgb(80, 156, 255);
-	padding: 5px;
+/* main stuff */
+.main-title {
+	grid-area: header;
+	margin: auto;
 }
 
 h1 {
 	letter-spacing: 1px;
 	margin: 0;
-}
-
-h3 {
-	border-bottom: 1px solid #bbb;
-	padding-bottom: 10px;
-	margin: 40px 0 10px;
+	font-size: 3em;
 }
 
 h4 {
 	margin: 0;
 	text-transform: uppercase;
+	font-weight: normal;
 }
 
-.inc-exp-container {
-	background-color: #fff;
+.main-container {
+	margin: auto;
+	width: 75vw;
+}
+
+.grid-container {
+	display: grid;
+
+	grid-template-areas:
+		'header header  header'
+		'balance-amount income-amount expense-amount'
+		'input-form history-list history-list'
+		'categories categories  categories'
+		'footer footer  footer';
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 0.5fr 0.75fr 2fr 1fr 0.25fr;
+	grid-column-gap: 0.25em;
+	grid-row-gap: 1em;
+}
+
+.main-row {
+	width: auto;
+}
+
+/* form styling  */
+#input-form {
+	grid-area: input-form;
+	border-radius: 5px;
+	background-color: #a3cae6;
+	margin: auto;
 	padding: 20px;
-	display: flex;
-	justify-content: space-between;
-	margin: 20px 0;
 }
 
-.inc-exp-container > .amounts {
-	flex: 1;
+#input-form {
+	justify-content: center;
+	align-content: center;
 	text-align: center;
+	border: 2px solid #020308;
+}
+#input-form h2 {
+	padding-bottom: 10px;
+	font-weight: normal;
 }
 
-.amounts:not(:last-child) {
-	border-right: 1px solid black;
+#input-form h3 {
+	font-weight: normal;
+	padding-top: 10px;
+}
+
+#categories-select,
+input[type='text'],
+input[type='number'] {
+	border: 1px solid #020308;
+	border-radius: 3px;
+	display: block;
+	font-size: 12px;
+	padding: 7px;
+	width: 90%;
+	margin: auto;
+}
+
+.form-control p {
+	text-transform: lowercase;
+	font-size: 0.75em;
+	padding-bottom: 5px;
+}
+
+#btn {
+	cursor: pointer;
+	background-color: #5a3324;
+	border-radius: 5px;
+	color: #a99e7b;
+	border-radius: 3px;
+	border: 0;
+	display: block;
+	font-size: 16px;
+	margin: 10px auto;
+	padding: 10px;
+	width: 90%;
+}
+
+#btn:focus {
+	border: none;
+}
+
+/* main totals */
+.amounts {
+	margin: auto;
+	text-align: center;
+	height: 80%;
+	width: 80%;
+	background-color: #a3cae6;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#balance {
+	grid-area: balance-amount;
+	border: 2px solid #020308;
+	border-radius: 5px;
+}
+
+#income {
+	grid-area: income-amount;
+	border: 2px solid #006e3c;
+	border-radius: 5px;
+}
+
+#expenses {
+	grid-area: expense-amount;
+	border: 2px solid #9f2b00;
+	border-radius: 5px;
 }
 
 .money {
@@ -65,72 +155,134 @@ h4 {
 }
 
 .money.plus {
-	color: green;
+	color: #006e3c;
 }
 
 .money.minus {
-	color: red;
+	color: #9f2b00;
 }
 
-label {
-	display: inline-block;
-	margin: 10px 0;
+.warning {
+	background-color: #f3867a;
 }
 
-input[type='text'],
-input[type='number'] {
-	border: 1px solid #dddddd;
-	border-radius: 3px;
-	display: block;
-	font-size: 16px;
+.warning::placeholder {
+	color: #9f2b00;
+}
+
+/* all lists */
+ul {
 	padding: 10px;
-	width: 100%;
-}
-
-.btn {
-	cursor: pointer;
-	background-color: #4a26ff;
-	color: #fff;
-	border-radius: 3px;
-	border: 0;
-	display: block;
-	font-size: 16px;
-	margin: 10px 0 30px;
-	padding: 10px;
-	width: 100%;
 }
 
 li {
-	background-color: #fff;
+	background-color: #cecbd2;
 	color: #333;
 	display: flex;
 	justify-content: space-between;
-	position: relative;
-	padding: 10px;
-	margin: 5px 0;
 	list-style: none;
+	margin: 5px 0;
+	padding: 10px;
+	align-items: center;
+	border-radius: 3px;
 }
 
-ul {
+.delete-btn {
+	border: none;
 	padding: 5px;
+	background-color: #9f2b00;
+	color: #cecbd2;
 }
 
-.list li.plus {
-	border-left: 10px solid #2ecc71;
+/* History list */
+#history-container {
+	margin: 5px auto;
+	grid-area: history-list;
+	text-align: center;
+	width: 95%;
+	background-color: #a3cae6;
+	border: 2px solid #020308;
+	border-radius: 5px;
+	padding-top: 10px;
 }
 
-.list li.minus {
-	border-left: 10px solid #c0392b;
+#history-list li.plus {
+	border-left: 10px solid #006e3c;
 }
 
-.categories:nth-child(odd) {
-	background-color: #ccc;
+#history-list li.minus {
+	border-left: 10px solid #9f2b00;
 }
 
-.categories:nth-child(even) {
-	background-color: #888;
+/* categories */
+#categories-container {
+	display: flex;
+	justify-content: space-evenly;
+	padding-top: 10px;
 }
 
-.categories > h4 {
-	color: brown;
+#categories-container {
+	grid-area: categories;
+}
+.categories {
+	text-align: center;
+	border: #020308 solid 2px;
+	border-radius: 5px;
+	width: 200px;
+}
+
+.categories h5 {
+	font-size: 0.95em;
+	padding: 5px;
+	display: flex;
+	justify-content: space-between;
+	font-weight: normal;
+}
+
+.categories li {
+	font-size: 0.95em;
+}
+
+.categories:nth-child(1) {
+	background-color: #686573;
+}
+
+.categories:nth-child(2) {
+	background-color: #71879a;
+}
+
+.categories:nth-child(3) {
+	background-color: #b1c5d4;
+}
+
+.categories:nth-child(4) {
+	background-color: #d6d7dc;
+}
+
+.categories:nth-child(5) {
+	background-color: #d8b9aa;
+}
+
+/* footer */
+footer {
+	text-align: center;
+	padding: 20px;
+	grid-area: footer;
+}
+
+footer p {
+	font-size: 0.85em;
+	line-height: 2em;
+	color: #839496;
+}
+
+footer a {
+	text-decoration: none;
+	cursor: pointer;
+	color: #839496;
+	padding: 0px 10px;
+}
+
+footer a:not(:last-child) {
+	border-right: 1px solid #020308;
 }
